# med-image-compression

./: README.md  dev.sh  train_all.sh
backend/: main.py  pyproject.toml  requirements.txt
backend/model/: train.py  vae.py
backend/tests/: test_image_utils.py  test_main.py  test_metrics.py  test_vae.py
backend/utils/: image_utils.py  metrics.py
backend/weights/: README.md
frontend/: README.md  package.json  svelte.config.js
frontend/src/routes/: +page.svelte
